<resources>
    <string name="app_name">SQLiteRoomProject</string>
    <string name="action_settings">Settings</string>
    <string name="hei_what_s_your_name">Hei, What\'s your name?</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="add">Add</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
